--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "opencage-api-client": "^1.0.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "sanitize-html": "^2.11.0"
   }
 }
